v0.8.0 (#95)
* Fix some source warnings.

* Bump to v0.8.0.

* Tweaks/fixes to docs.

* Update Dockerfile.

* Apply Google Java format.